# unroll-ghc-plugin

./: .gitignore  README.md  index.html  params.json  unroll-ghc-plugin.cabal  unroll-plugin.cabal
LoopUnrolling/: Annotations.hs  Pass.hs  Plugin.hs  Utilities.hs
tests/: Makefile  Peeling.hs  Unrolling.hs
